# Project-IOT

./: .gitignore  LICENSE  README.md  comandos_importantes.txt  iotDb.db  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/config/: __init__.py  configureDB.py  configure_database.py  dirs_sys.py  email_settings.py  envConfig.py  general_settings.py
app/controllers/: __init__.py  climate_record_controller.py  default_controller.py  websocket_climate_record_controller.py
app/core/: __init__.py  climate_data_mediator.py  scheduler.py  state.py
app/dependencies/: __init__.py  database_dependencies.py
app/events/: __init__.py  shutdown_event.py  startup.py  startup_event.py
app/logs/: __init__.py  rotating_file_handler.py
app/models/: __init__.py  base_model.py  temperature_incident.py
app/modules/: __init__.py  api_service.py  email_send.py  email_service.py  email_transport.py
app/routes/: __init__.py  default.py  websocket_climate_record.py
app/schemas/: __init__.py  api_response_schema.py
app/services/: __init__.py  api_service_arduino.py  climate_record_service.py  email_send_gmail.py  example_service.py  plain_transport.py  ssl_transport.py  tls_transport.py
app/utils/: __init__.py  pagination.py  result.py  serialize_datetime.py
backend/: LICENSE  README.md  pytest.ini
backend/app/: main.py
backend/iot-code/: codigo_arduino_ventilador_1.ino
frontend/: package.json
iot-code/: codigo_arduino_ventilador_1.ino
src/: App.css  App.js
templates/: email_test.html  template-email-otimizado.html
(+20 files in other folders)
