[project]
name = "project-iot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosmtplib>=4.0.1",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
